// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`myDatasets test renders active filters 1`] = `
<StandardPage
  title="My research data"
>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results. You may be able to 
            <a
              href="/data-collections/add"
            >
              add a missing dataset
            </a>
            .
          </div>
        }
        title="No datasets found"
      >
        <div>
          We were unable to find any results. You may be able to 
          <a
            href="/data-collections/add"
          >
            add a missing dataset
          </a>
          .
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`myDatasets test renders list of publications no facets 1`] = `
<StandardPage
  title="My research data"
>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={9}
      xs={12}
    >
      <StandardCard
        noHeader={true}
      >
        <span>
          Displaying records 1 to 2 of 2 total records. 
        </span>
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Add to this list by 
              <a
                href="/data-collections/add"
              >
                adding a missing dataset
              </a>
              .
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              initPageLength={20}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 2,
                  "total": 2,
                }
              }
              sortBy="published_date"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 2,
                  "total": 2,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <PublicationsList
              hideCountDiff={false}
              publicationsList={
                Array [
                  1,
                  2,
                  3,
                ]
              }
              publicationsListSubset={Array []}
              showDefaultActions={true}
              showMetrics={false}
              showSourceCountIcon={false}
              showSources={false}
              showUnpublishedBufferFields={false}
              subsetCustomActions={Array []}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 2,
                  "total": 2,
                }
              }
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`myDatasets test renders list of publications with facets 1`] = `
<StandardPage
  title="My research data"
>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={9}
      xs={12}
    >
      <StandardCard
        noHeader={true}
      >
        <span>
          Displaying records 1 to 2 of 2 total records. 
        </span>
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Add to this list by 
              <a
                href="/data-collections/add"
              >
                adding a missing dataset
              </a>
              .
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              initPageLength={20}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 2,
                  "total": 2,
                }
              }
              sortBy="published_date"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 2,
                  "total": 2,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <PublicationsList
              hideCountDiff={false}
              publicationsList={
                Array [
                  1,
                  2,
                  3,
                ]
              }
              publicationsListSubset={Array []}
              showDefaultActions={true}
              showMetrics={false}
              showSourceCountIcon={false}
              showSources={false}
              showUnpublishedBufferFields={false}
              subsetCustomActions={Array []}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 2,
                  "total": 2,
                }
              }
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={true}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        md={3}
      >
        <StandardRighthandCard
          title="Refine results"
        >
          <FacetsFilter
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {},
              }
            }
            excludeFacetsList={
              Array [
                "Scopus document type",
                "Subtype",
                "Year published",
                "Display type",
              ]
            }
            facetsData={
              Object {
                "Display type": Object {
                  "buckets": Array [
                    Object {
                      "doc_count": 95,
                      "key": 179,
                    },
                    Object {
                      "doc_count": 34,
                      "key": 130,
                    },
                    Object {
                      "doc_count": 2,
                      "key": 177,
                    },
                    Object {
                      "doc_count": 2,
                      "key": 183,
                    },
                    Object {
                      "doc_count": 1,
                      "key": 174,
                    },
                  ],
                  "doc_count_error_upper_bound": 0,
                  "sum_other_doc_count": 3,
                },
                "Keywords": Object {
                  "buckets": Array [
                    Object {
                      "doc_count": 15,
                      "key": "Brca1",
                    },
                    Object {
                      "doc_count": 15,
                      "key": "Oncology",
                    },
                    Object {
                      "doc_count": 13,
                      "key": "Breast cancer",
                    },
                    Object {
                      "doc_count": 12,
                      "key": "Genetics & Heredity",
                    },
                    Object {
                      "doc_count": 10,
                      "key": "Biochemistry & Molecular Biology",
                    },
                  ],
                  "doc_count_error_upper_bound": 0,
                  "sum_other_doc_count": 641,
                },
              }
            }
            isMyDataSetPage={true}
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={Object {}}
            showOpenAccessFilter={true}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`myDatasets test renders loading screen while loading account data 1`] = `""`;

exports[`myDatasets test renders loading screen while loading publications  1`] = `
<StandardPage
  title="My research data"
>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(InlineLoader)
        message="Searching for your datasets"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`myDatasets test renders loading screen while loading publications while filtering 1`] = `
<StandardPage
  title="My research data"
>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={9}
      xs={12}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Add to this list by 
              <a
                href="/data-collections/add"
              >
                adding a missing dataset
              </a>
              .
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              disabled={true}
              initPageLength={20}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              sortBy="published_date"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <div
              className="is-centered"
            >
              <WithStyles(InlineLoader)
                message="Retrieving your datasets"
              />
            </div>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`myDatasets test renders no results 1`] = `
<StandardPage
  title="My research data"
>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results. You may be able to 
            <a
              href="/data-collections/add"
            >
              add a missing dataset
            </a>
            .
          </div>
        }
        title="No datasets found"
      >
        <div>
          We were unable to find any results. You may be able to 
          <a
            href="/data-collections/add"
          >
            add a missing dataset
          </a>
          .
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;
